# ImageReader

./: .gitignore  CMakeLists.txt  ImageProgram.cpp  README.md
ImageReaderCimg/: CMakeLists.txt  ImageProgram.cpp
ImageReaderOpenCV/: CMakeLists.txt  vcpkg.json
ImageReaderOpenCV/src/: main.cpp
